# studycraft

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMPLETED_IMPROVEMENTS.md  Dockerfile  LICENSE  PLAN.md  README.hf-spaces.md  README.md  TASK_TRACKER.md  docker-compose.yml  pyproject.toml  sample_python.md  test_chapters.md
.github/workflows/: ci.yml  release.yml
scripts/: ci.py  deploy.py  release.py
src/studycraft/: __init__.py  audio_generator.py  cli.py  detector.py  engine.py  export.py  export_docx.py  export_epub.py  jobstore.py  loader.py  model_registry.py  rag.py  researcher.py  template.py  themes.py  tts_engines.py  validator.py  video_composer.py  video_generator.py  web.py
src/studycraft/templates/: index.html
tests/: test_detector.py  test_engine.py  test_export.py  test_jobstore.py  test_loader.py  test_model_registry.py  test_template.py  test_themes.py  test_validator.py  test_web.py
