[project]
name = "studycraft"
version = "0.1.0"
description = "Craft structured, research-backed practice guides from any document — PDF, DOCX, TXT, RTF, MD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "duckduckgo-search>=8.1.1",
    "hatchling>=1.29.0",
    "markdown>=3.10.2",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.1.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "striprtf>=0.0.26",
    "typer>=0.15.0",
    "weasyprint>=68.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
studycraft     = "studycraft.cli:main"
studycraft-web = "studycraft.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studycraft"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
