[project]
name = "studycraft"
version = "0.9.0"
description = "Craft structured, research-backed practice guides from any document — PDF, DOCX, TXT, RTF, EPUB, MD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "ddgs>=9.14.0",
    "ebooklib>=0.20",
    "fastapi>=0.136.0",
    "hatchling>=1.29.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.26",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "striprtf>=0.0.26",
    "typer>=0.15.0",
    "uvicorn>=0.44.0",
    "fpdf2>=2.8.3",
    "playwright>=1.52.0",
    "ddgs>=9.14.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
studycraft     = "studycraft.cli:main"
studycraft-web = "studycraft.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studycraft"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
