[project]
name = "studycraft"
version = "0.9.2"
description = "Craft structured, research-backed practice guides from any document — PDF, DOCX, TXT, RTF, EPUB, MD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "ddgs>=9.14.0",
    "ebooklib>=0.20",
    "fastapi>=0.136.0",
    "fpdf2>=2.8.3",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "openai>=1.82.0",
    "pygments>=2.18.0",
    "pypdf>=6.10.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.26",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "striprtf>=0.0.26",
    "typer>=0.15.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
studycraft     = "studycraft.cli:main"
studycraft-web = "studycraft.web:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studycraft"]
include = ["src/studycraft/templates/*"]

[tool.uv]
# Force CPU-only PyTorch — avoids pulling ~2GB CUDA wheels that conflict on Windows/CPU machines.
# This is the same fix used in the Dockerfile (UV_TORCH_BACKEND=cpu).
# Without this, `uv sync` may silently remove packages mid-resolution when the CUDA index conflicts.
torch-backend = "cpu"

[tool.uv.pip]
# Always reinstall the editable package on sync so CLI entry points are never lost
reinstall-package = ["studycraft"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S101",  # assert in tests
    "S603",  # subprocess with trusted input
    "S607",  # partial executable path (ffmpeg, uv, playwright)
    "S110",  # try/except/pass — intentional silent fallbacks
    "S112",  # try/except/continue — intentional
    "S310",  # urlopen — all URLs are https:// constants
    "S324",  # md5 — used for cache keys only, not security
    "S104",  # 0.0.0.0 — required for Docker/HF Spaces
    "B904",  # raise in except — typer.Exit() pattern
    "B008",  # Depends() calls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"src/studycraft/export.py" = ["E501"]
"src/studycraft/template.py" = ["E501"]
"src/studycraft/tts_engines.py" = ["E501"]
"src/studycraft/jobstore.py" = ["E501"]
"src/studycraft/engine.py" = ["E501"]

[project.optional-dependencies]
pdf = ["playwright>=1.50.0"]
tts-kitten = [
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]
tts-chatterbox = ["chatterbox-tts>=0.1.0"]
tts-coqui = ["coqui-tts>=0.25.0"]
tts = [
    "chatterbox-tts>=0.1.0",
    "coqui-tts>=0.25.0",
]
video = [
    "manim>=0.18.0",
    "pillow>=10.0",
    "videopython>=0.24.0",
]
